fixed position feedback

--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -1,8 +1,14 @@
-<div id="feedback-button" class="absolute md:bottom-138.25 xl:bottom-7 md:right-10 xl:right-13 z-10">
+<div class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+    <div id="feedback-button" class="absolute md:bottom-322.75 xl:bottom-219.25 md:right-5 xl:-right-59.75 z-10">
     <div class="md:size-33.75 xl:size-51.5">
-        <p class="bg-blue-100 rounded-xl md:text-3xs xl:text-xs font-montserrat md:px-2.5 md:py-2 xl:pt-3.75 xl:pl-4.25 xl:pr-4.25 xl:pb-3.75 md:leading-3 xl:leading-4 relative md:before:size-2.5 xl:before:size-4 before:bg-blue-100 before:rotate-45 before:absolute md:before:top-8 xl:before:top-12.5 md:before:right-4.25 xl:before:right-6.25 before:-z-10"><span class="text-green-400">Мы онлайн!</span> Консультация и -30% в чате. <span class="text-green-400">Без звонка!</span></p>
-        <button id="social-networks-button" class="md:size-13 xl:size-20 flex items-center justify-center bg-amber-100 rounded-full relative md:mt-4 xl:mt-5.5 md:ml-20.75 xl:ml-31.75">
-            <span class="absolute md:size-4 xl:size-6.25 bg-grey-950 rounded-full -top-1 right-0 text-blue-100 font-bold font-montserrat md:text-3xs xl:text-xs md:pt-0.5 xl:pt-1">99</span>
+        <p
+            class="bg-blue-100 rounded-xl md:text-3xs xl:text-xs font-montserrat md:px-2.5 md:py-2 xl:pt-3.75 xl:pl-4.25 xl:pr-4.25 xl:pb-3.75 md:leading-3 xl:leading-4 relative md:before:size-2.5 xl:before:size-4 before:bg-blue-100 before:rotate-45 before:absolute md:before:top-8 xl:before:top-12.5 md:before:right-4.25 xl:before:right-6.25 before:-z-10">
+            <span class="text-green-400">Мы онлайн!</span> Консультация и -30% в чате. <span class="text-green-400">Без
+                звонка!</span></p>
+        <button id="social-networks-button"
+            class="md:size-13 xl:size-20 shadow-lg flex items-center justify-center bg-amber-100 rounded-full relative md:mt-4 xl:mt-5.5 md:ml-20.75 xl:ml-31.75">
+            <span
+                class="absolute md:size-4 xl:size-6.25 bg-grey-950 rounded-full -top-1 right-0 text-blue-100 font-bold font-montserrat md:text-3xs xl:text-xs md:pt-0.5 xl:pt-1">99</span>
             <svg id="passive-networks" class="md:size-6 xl:size-9">
                 <use href="#icon-chat"></use>
             </svg>
@@ -11,20 +17,21 @@
             </svg>
         </button>
         <div id="social-networks-panel" class="hidden">
-            <div class="flex items-center justify-center md:max-w-19 xl:max-w-26.25 md:h-8 xl:h-13 bg-blue-100 rounded-full gap-2.75 md:-mt-10 xl:-mt-15.5 md:ml-0 xl:ml-2 z-10">
-            <a href="#"
-                class="md:size-5.5 xl:size-8.5 bg-gray-950 text-blue-100 rounded-full flex items-center justify-center">
-                <svg class="md:size-3.5 xl:size-4.5">
-                    <use href="#icon-instagram"></use>
-                </svg>
-            </a>
-            <a href="#"
-            class="md:size-5.5 xl:size-8.5 bg-gray-950 text-blue-100 rounded-full flex items-center justify-center">
-            <svg>
-                <use href="#icon-facebook"></use>
-            </svg>
-        </a>
-        </div>
+            <div
+                class="flex items-center justify-center md:max-w-19 xl:max-w-26.25 md:h-8 xl:h-13 bg-blue-100 rounded-full gap-2.75 md:-mt-10 xl:-mt-15.5 md:ml-0 xl:ml-2 z-10">
+                <a href="#"
+                    class="md:size-5.5 xl:size-8.5 bg-gray-950 text-blue-100 rounded-full flex items-center justify-center">
+                    <svg class="md:size-3.5 xl:size-4.5">
+                        <use href="#icon-instagram"></use>
+                    </svg>
+                </a>
+                <a href="#"
+                    class="md:size-5.5 xl:size-8.5 bg-gray-950 text-blue-100 rounded-full flex items-center justify-center">
+                    <svg>
+                        <use href="#icon-facebook"></use>
+                    </svg>
+                </a>
+            </div>
         </div>
         <a href="#"
             class="md:size-5.5 xl:size-8.5 bg-gray-950 text-blue-100 rounded-full flex items-center justify-center absolute md:top-28.5 xl:top-43.5 md:right-3.5 xl:right-5">
@@ -39,4 +46,5 @@
             </svg>
         </a>
     </div>
+</div>
 </div>
