--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -49,7 +49,7 @@
         <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-60 md:max-w-65 xl:max-w-149 md:-mt-110 md:ml-22.75 xl:ml-0 xl:-mt-8.5">
+                <div class="max-w-60 md:max-w-65 xl:max-w-149 md:-mt-110 -mt-70.5 ml-7.5 md:ml-22.75 xl:ml-0 xl:-mt-8.5">
                     <h2 class="font-comfortaa font-bold text-base md:text-lg xl:text-40 tracking-wide leading-4.5 md:leading-5 xl:leading-11 -ml-0.25">Кето питание - <span
                             class="text-green-400">вкусное и экстремальное</span> быстрое похудение</h2>
                     <p class="font-montserrat text-2xs md:text-xs xl:text-xl mt-1 ml-0.25 md:mt-4 md:ml-0.5">4 приема пищи.</p>
