--- a/src/partials/nav-category.html
+++ b/src/partials/nav-category.html
@@ -1,44 +1,44 @@
-<nav class="flex flex-col fixed md:left-10 xl:left-12.5 md:top-36.25 xl:top-55 md:gap-3 xl:gap-12.5 z-20">
+<nav class="flex flex-row md:flex-col fixed left-2 md:left-9 xl:left-11.5 top-121.5 md:top-34.25 xl:top-53 gap-1 md:gap-3 xl:gap-12.5 z-20">
     <a href="#" 
-        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="md:size-10 xl:size-17.5">
+        class="flex flex-col md:flex-row items-center gap-1.25 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group">
+        <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-calories"></use>
         </svg>
-        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Программы 800 - 2400 ккал</span>
+        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl text-center items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Программы 800 - 2400 ккал</span>
     </a>
-    <a href="#"
-        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="md:size-10 xl:size-17.5">
+     <a href="#"
+        class="flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group -ml-3.75 md:ml-0">
+        <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-fish"></use>
         </svg>
-        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Fish</span>
+        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Fish</span>
     </a>
     <a href="#"
-        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="md:size-10 xl:size-17.5">
+        class="flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group -ml-3.75 md:ml-0">
+        <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-carrot"></use>
         </svg>
-        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Vegetable</span>
+        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Vegetable</span>
     </a>
     <a href="#"
-        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="md:size-10 xl:size-17.5">
+        class="flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group -ml-3.75 md:ml-0">
+        <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-bottle"></use>
         </svg>
-        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Detox</span>
+        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Detox</span>
     </a>
     <a href="#"
-        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="md:size-10 xl:size-17.5">
+        class="flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group -ml-3.75 md:ml-0">
+        <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-meat"></use>
         </svg>
-        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Keto</span>
+        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Keto</span>
     </a>
     <a href="#"
-        class="flex items-center w-10 xl:w-17.5 hover:w-auto hover:text-green-400 bg-blue-100 rounded-full shadow-lg group">
-        <svg class="md:size-10 xl:size-17.5">
+        class="flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group -ml-3.75 md:ml-0">
+        <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-table"></use>
         </svg>
-        <span class="hidden xl:group-hover:block text-2xl mx-9.5 font-bold font-comfortaa">Top 5</span>
+        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Top 5</span>
     </a>
 </nav>
