--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -2,8 +2,8 @@
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <div
-                class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-50 md:max-w-55 xl:max-w-134 -mt-85 md:-mt-100 ml-7.5 md:ml-22.25 xl:ml-0 xl:-mt-20.25">
+                class="flex flex-col justify-center md:95 xl:h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                <div class="max-w-50 md:max-w-55 xl:max-w-134 mt-51.25 md:-mt-100 ml-7.5 md:ml-22.25 xl:ml-0 xl:-mt-20.25">
                     <h1 class="text-base md:text-lg xl:text-40 font-comfortaa font-bold leading-4.75 md:leading-5 xl:leading-11.5 md:ml-0.25 xl:-ml-0.25">Сервис правильного
                         питания.
                         <span
@@ -49,7 +49,7 @@
         <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-60 md:max-w-65 xl:max-w-149 md:-mt-110 -mt-70.5 ml-7.5 md:ml-22.75 xl:ml-0 xl:-mt-8.5">
+                <div class="max-w-60 md:max-w-65 xl:max-w-149 md:-mt-110 -mt-75.25 ml-7.5 md:ml-22.75 xl:ml-0 xl:-mt-8.5">
                     <h2 class="font-comfortaa font-bold text-base md:text-lg xl:text-40 tracking-wide leading-4.5 md:leading-5 xl:leading-11 -ml-0.25">Кето питание - <span
                             class="text-green-400">вкусное и экстремальное</span> быстрое похудение</h2>
                     <p class="font-montserrat text-2xs md:text-xs xl:text-xl mt-1 ml-0.25 md:mt-4 md:ml-0.5">4 приема пищи.</p>
@@ -69,11 +69,11 @@
         <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-45 md:max-w-48.75 xl:max-w-133.75 -mt-70.5 md:-mt-113.25 ml-7.5 md:ml-22.25 xl:ml-0 xl:-mt-8">
+                <div class="max-w-45 md:max-w-48.75 xl:max-w-133.75 -mt-77.5 md:-mt-113.25 ml-7.5 md:ml-22.25 xl:ml-0 xl:-mt-8.75">
                     <h2
-                        class="font-comfortaa font-bold text-base md:text-lg xl:text-40 tracking-wide leading-4.5 md:leading-5 xl:leading-10.5 md:ml-0.25 xl:-ml-0.25">
+                        class="font-comfortaa font-bold text-base md:text-lg xl:text-40 tracking-wide leading-4.5 md:leading-5 xl:leading-11.5 md:ml-0.25 xl:-ml-0.25">
                         Detox программа – <span class="text-green-400">вкусное очищение</span> организма</h2>
-                    <p class="leading-3.25 md:leading-4 max-w-34.5 md:max-w-47.75 xl:max-w-133.5 text-2xs md:text-xs xl:text-xl font-montserrat mt-1.25 md:mt-2.5 xl:mt-6.5 ml-0.5 md:ml-1 xl:ml-0.5">8 бутылочек
+                    <p class="leading-3.25 md:leading-4 max-w-34.5 md:max-w-47.75 xl:max-w-133.5 text-2xs md:text-xs xl:text-xl font-montserrat mt-1.25 md:mt-2.5 xl:mt-4.5 ml-0.5 md:ml-1 xl:ml-0.5">8 бутылочек
                         <span class="text-green-400 font-medium">натуральных</span> смузи и фрешей.</p>
                     <div
                         class="flex flex-col xl:flex-row gap-1.75 md:gap-3 xl:gap-8 mt-2.5 md:mt-6.5 xl:mt-10.75 max-w-34 md:max-w-37.5 xl:max-w-133 xl:-ml-0.25">
@@ -95,11 +95,6 @@
     <div
         class="swiper-navigation w-45 h-6 flex items-center justify-center absolute top-91.5 md:top-84.25 xl:top-204.5 xl:left-1/2 md:left-29.75 left-9.5 xl:-translate-1/2 z-30">
         <div class="swiper-pagination">
-            <svg width="14" height="14" viewBox="0 0 14 14" style="transform:rotate(0deg)">
-                <circle r="5" cx="50%" cy="50%" fill="transparent" stroke="#ff0000" stroke-width="2"></circle>
-                <circle r="5" cx="50%" cy="50%" stroke="#000000" stroke-width="2" stroke-dashoffset="1.25rem"
-                    fill="transparent" stroke-dasharray="2.7475rem"></circle>
-            </svg>
         </div>
         <div class="swiper-button-prev">
             <svg>
