--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header>
     <div
-        class="flex items-center max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-8 pr-5 xl:pl-19.5 xl:pr-20 pt-3.75 md:pt-1.75 xl:pt-4 relative before:size-129.75 before:-top-68 before:-right-47 md:before:size-191.25 xl:before:size-323 before:bg-green-400 before:rounded-full before:absolute md:before:-right-103 md:before:-top-22.75 xl:before:-right-159 xl:before:-top-24.5  before:-z-10 before:shadow-xl">
+        class="flex items-center max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-8 pr-5 xl:pl-19.5 xl:pr-20 pt-3.75 md:pt-1.75 xl:pt-4 xl:pb-4 relative before:size-129.75 before:-top-68 before:-right-47 md:before:size-191.25 xl:before:size-323 before:bg-green-400 before:rounded-full before:absolute md:before:-right-103 md:before:-top-22.75 xl:before:-right-159 xl:before:-top-24.5  before:-z-10 before:shadow-xl">
         <a href="index.html"
             class="mr-auto md:mr-0 flex flex-col items-center gap-1.25 relative z-10 md:ml-1.5 xl:ml-0 before:absolute before:-z-10 before:bg-blue-100 before:rounded-full before:size-34.5 md:before:size-37.5 xl:before:size-50 2xl:before:size-66 before:left-1/2 before:top-1/2 before:-translate-1/2 before:shadow-xl">
             <img src="./assets/img/logo.png" alt="logo" class="w-41.5 md:w-34.5 h-13 xl:min-w-46.5 xl:h-23 mt-1.5">
@@ -15,10 +15,10 @@
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:px-5 md:py-1 xl:py-2.5 hover:text-green-400">Блог</a>
             </nav>
             <a href="tel:+380689494919" class="@max-md:w-full block text-center md:inline-block hover:border-green-100 hover:text-green-400 md:hover:text-blue-100 hover:bg-blue-100 md:hover:bg-green-400 text-blue-100 md:text-green-400 border-3 border-green-400 md:border-blue-100 rounded-4xl ml-auto px-9.5 py-1.5 md:px-4 md:py-1.5 xl:px-6.5 xl:py-2.25 font-bold text-lg md:text-2xs xl:text-xl bg-green-400 md:bg-blue-100 shadow-xl font-montserrat md:mr-0.5 xl:mr-0">+38 (068) 949 - 49 -19</a>
-            <nav class="absolute top-25 right-8 md:top-17.75 md:left-47.5 xl:top-31 xl:left-85.75 flex flex-col md:flex-row gap-2.5 xl:gap-3.75">
-                <a href="#" class="bg-green-400 text-blue-300 shadow-xl size-10 md:size-5 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">ru</a>
-                <a href="#" class="bg-blue-100 shadow-xl size-10 md:size-5 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">ua</a>
-                <a href="#" class="bg-blue-100 shadow-xl size-10 md:size-5 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">en</a>
+            <nav id="language-navigation" class="absolute top-25 right-8 md:top-17.75 md:left-47.5 xl:top-31 xl:left-85.75 flex flex-col md:flex-row gap-2.5 xl:gap-3.75">
+                <a href="#" class="language-item bg-green-400 text-blue-300 shadow-xl size-10 md:size-5 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">ru</a>
+                <a href="#" class="language-item bg-blue-100 shadow-xl size-10 md:size-5 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">ua</a>
+                <a href="#" class="language-item bg-blue-100 shadow-xl size-10 md:size-5 xl:size-8.75 rounded-full flex items-center justify-center md:text-2xs xl:text-base uppercase hover:bg-green-400 hover:text-blue-300">en</a>
             </nav>
         </div>
         <div class="bg-blue-100 flex h-8.5 w-full justify-end items-center rounded-full md:hidden">
