fixed position navigation + js

--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -2,8 +2,8 @@
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <div
-                class="flex flex-col justify-center md:95 xl:h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto -mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-50 md:max-w-55 xl:max-w-134 mt-51.25 md:-mt-100 ml-7.5 md:ml-22.25 xl:ml-0 xl:-mt-20.25">
+                class="flex flex-col justify-center md:95 xl:h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto mt-0 xl:-mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                <div class="max-w-50 md:max-w-55 xl:max-w-134 mt-51.25 md:mt-35.25 ml-7.5 md:ml-22.25 xl:ml-0 xl:-mt-20.25">
                     <h1 class="text-base md:text-lg xl:text-40 font-comfortaa font-bold leading-4.75 md:leading-5 xl:leading-11.5 md:ml-0.25 xl:-ml-0.25">Сервис правильного
                         питания.
                         <span
@@ -25,7 +25,7 @@
         </div> 
          <div class="swiper-slide">
             <div
-                class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto -mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto mt-0 xl:-mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
                 <div class="max-w-64 md:max-w-60 xl:max-w-143 ml-3.5 md:ml-22.5 xl:ml-0 -mt-78.5 md:-mt-108.25 xl:-mt-5">
                     <h2 class="text-sm md:text-lg xl:text-32 font-bold font-comfortaa tracking-wide leading-4.75 md:leading-5.5 xl:leading-8.75 -ml-0.25"><span
                             class="text-green-400 xl:leading-10.25">Доверьтесь
@@ -48,7 +48,7 @@
         </div> 
         <div class="swiper-slide">
             <div
-                class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto -mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto mt-0 xl:-mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
                 <div class="max-w-60 md:max-w-65 xl:max-w-149 md:-mt-110 -mt-75.25 ml-7.5 md:ml-22.75 xl:ml-0 xl:-mt-8.5">
                     <h2 class="font-comfortaa font-bold text-base md:text-lg xl:text-40 tracking-wide leading-4.5 md:leading-5 xl:leading-11 -ml-0.25">Кето питание - <span
                             class="text-green-400">вкусное и экстремальное</span> быстрое похудение</h2>
@@ -68,7 +68,7 @@
         </div>
         <div class="swiper-slide">
             <div
-                class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto -mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto mt-0 xl:-mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
                 <div class="max-w-45 md:max-w-48.75 xl:max-w-133.75 -mt-77.5 md:-mt-113.25 ml-7.5 md:ml-22.25 xl:ml-0 xl:-mt-8.75">
                     <h2
                         class="font-comfortaa font-bold text-base md:text-lg xl:text-40 tracking-wide leading-4.5 md:leading-5 xl:leading-11.5 md:ml-0.25 xl:-ml-0.25">
