--- a/src/partials/nav-category.html
+++ b/src/partials/nav-category.html
@@ -1,44 +1,46 @@
-<nav class="flex flex-row md:flex-col fixed left-2 md:left-10 xl:left-12.5 top-121.5 md:top-36 xl:top-55 gap-1 md:gap-3 xl:gap-12.5 z-20">
+<aside class="fixed top-123.5 md:top-36 xl:top-55 left-2.5 md:left-10 xl:left-12.5 z-50">
+<nav class="flex md:flex-col left-2 md:left-10 xl:left-12.5 top-121.5 md:top-36 xl:top-55 gap-1 md:gap-3 xl:gap-12.5 z-20">
     <a href="#" 
-        class="flex flex-col md:flex-row items-center gap-1.25 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group">
+        class="category-link flex flex-col md:flex-row items-center gap-1.25 md:gap-0 md:w-10 xl:w-17.5 bg-transparent hover:text-green-400 md:bg-blue-100 rounded-full md:shadow-lg">
         <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-calories"></use>
         </svg>
-        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl text-center items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Программы 800 - 2400 ккал</span>
+        <span class="flex md:hidden text-4xs md:text-base xl:text-2xl text-center items-center justify-center xl:mx-9.5 font-bold font-comfortaa w-15  md:w-auto -ml-0.25 md:ml-0 md:mr-2 xl:ml-6.75">Программы 800 - 2400 ккал</span>
     </a>
      <a href="#"
-        class="flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group -ml-3.75 md:ml-0">
+        class="category-link flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 bg-transparent hover:text-green-400 md:bg-blue-100 rounded-full md:shadow-lg -ml-3.75 md:ml-0 md:mr-2">
         <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-fish"></use>
         </svg>
-        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Fish</span>
+        <span class="flex md:hidden text-4xs md:text-base xl:text-2xl items-center justify-center xl:mx-9.5 font-bold font-comfortaa w-15 md:w-auto -ml-0.25 md:ml-0 md:mr-2 xl:ml-6.75">Fish</span>
     </a>
     <a href="#"
-        class="flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group -ml-3.75 md:ml-0">
+        class="category-link flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 bg-transparent hover:text-green-400 md:bg-blue-100 rounded-full md:shadow-lg -ml-3.75 md:ml-0 md:mr-2">
         <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-carrot"></use>
         </svg>
-        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Vegetable</span>
+        <span class="flex md:hidden text-4xs md:text-base xl:text-2xl items-center justify-center xl:mx-9.5 font-bold font-comfortaa w-15 md:w-auto -ml-0.25 md:ml-0 md:mr-2 xl:ml-6.75">Vegetable</span>
     </a>
     <a href="#"
-        class="flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group -ml-3.75 md:ml-0">
+        class="category-link flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 bg-transparent hover:text-green-400 md:bg-blue-100 rounded-full md:shadow-lg -ml-3.75 md:ml-0 md:mr-2">
         <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-bottle"></use>
         </svg>
-        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Detox</span>
+        <span class="flex md:hidden text-4xs md:text-base xl:text-2xl items-center justify-center xl:mx-9.5 font-bold font-comfortaa w-15 md:w-auto -ml-0.25 md:ml-0 md:mr-2 xl:ml-6.75">Detox</span>
     </a>
     <a href="#"
-        class="flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group -ml-3.75 md:ml-0">
+        class="category-link flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 bg-transparent hover:text-green-400 md:bg-blue-100 rounded-full md:shadow-lg -ml-3.75 md:ml-0 md:mr-2">
         <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-meat"></use>
         </svg>
-        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Keto</span>
+        <span class="flex md:hidden text-4xs md:text-base xl:text-2xl items-center justify-center xl:mx-9.5 font-bold font-comfortaa w-15 md:w-auto -ml-0.25 md:ml-0 md:mr-2 xl:ml-6.75">Keto</span>
     </a>
     <a href="#"
-        class="flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 md:hover:w-auto hover:text-green-400 bg-transparent md:bg-blue-100 rounded-full md:shadow-lg md:group -ml-3.75 md:ml-0">
+        class="category-link flex flex-col md:flex-row items-center gap-2.5 md:gap-0 md:w-10 xl:w-17.5 bg-transparent hover:text-green-400 md:bg-blue-100 rounded-full md:shadow-lg -ml-3.75 md:ml-0 md:mr-2">
         <svg class="size-10.5 md:size-10 xl:size-17.5 bg-blue-100 rounded-full tracking-wide">
             <use href="#icon-table"></use>
         </svg>
-        <span class="flex md:hidden xl:group-hover:block text-4xs md:text-2xl items-center justify-center md:mx-9.5 font-bold font-comfortaa w-15 md:w-0 -ml-0.25 md:ml-0">Top 5</span>
+        <span class="flex md:hidden text-4xs md:text-base xl:text-2xl items-center justify-center xl:mx-9.5 font-bold font-comfortaa w-15 md:w-auto -ml-0.25 md:ml-0 md:mr-2 xl:ml-6.75">Top 5</span>
     </a>
 </nav>
+</aside>
