--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -3,14 +3,14 @@
         <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center md:95 xl:h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto mt-0 xl:-mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-50 md:max-w-55 xl:max-w-134 mt-51.25 md:mt-35.75 ml-7.5 md:ml-22.25 xl:ml-0 xl:-mt-22.25">
-                    <h1 class="text-base md:text-lg xl:text-40 font-comfortaa font-bold leading-4.75 md:leading-5 xl:leading-11.25 md:ml-0.25 xl:-ml-0.25">Сервис правильного
+                <div class="max-w-50 md:max-w-55 xl:max-w-134 mt-51.25 ml-auto mr-auto md:mt-35.75  md:ml-22.25 xl:ml-0 xl:-mt-22.25">
+                    <h1 class="text-base md:text-lg xl:text-40 font-comfortaa font-bold leading-4.75 md:leading-5 xl:leading-11.25 -ml-2.5 md:ml-0.25 xl:-ml-0.25">Сервис правильного
                         питания.
                         <span
                             class="text-green-400 inline-block md:leading-5 xl:leading-11.25 tracking-wide xl:mb-0.5">Худей
                             быстро!</span>
                     </h1>
-                    <div class="flex flex-col xl:flex-row gap-1.75 md:gap-2.5 xl:gap-7.75 mt-2.25 md:mt-3.75 xl:mt-10 max-w-34 md:max-w-37.5 xl:max-w-132.75 md:ml-0.25 xl:ml-0.5">
+                    <div class="flex flex-col xl:flex-row gap-1.75 md:gap-2.5 xl:gap-7.75 mt-2.25 md:mt-3.75 xl:mt-10 max-w-34 md:max-w-37.5 xl:max-w-132.75 -ml-2.5 md:ml-0.25 xl:ml-0.5">
                         <button
                             class="bg-green-400 pt-1.25 pl-2.5 pr-2.5 pb-1 md:pt-1 xl:pt-2.75 xl:pl-16.5 md:pb-0.5 xl:pb-1.5 xl:pr-16.5 font-bold text-sm md:text-base xl:text-26 font-comfortaa rounded-full text-blue-100 tracking-wide shadow-xl border-2 border-green-400 hover:bg-blue-100 hover:text-green-400">Заказать</button>
                         <div class="flex flex-col xl:-mt-0.5">
@@ -26,15 +26,15 @@
          <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto mt-0 xl:-mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-64 md:max-w-60 xl:max-w-143 ml-3.5 md:ml-22.5 xl:ml-0 -mt-78.5 md:-mt-108.25 xl:-mt-5.25">
-                    <h2 class="text-sm md:text-lg xl:text-32 font-bold font-comfortaa tracking-wide leading-4.75 md:leading-5.5 xl:leading-9 -ml-0.25"><span
+                <div class="max-w-64 md:max-w-60 xl:max-w-143 ml-3.5 md:ml-22.5 xl:ml-0 ml-auto mr-auto -mt-78.5 md:-mt-108.25 xl:-mt-5.25">
+                    <h2 class="text-sm md:text-lg xl:text-32 font-bold font-comfortaa tracking-wide leading-4.75 md:leading-5.5 xl:leading-9 -ml-2.5 md:-ml-0.25"><span
                             class="text-green-400">Доверьтесь
                             профессионалам.</span> Я Кобылинский Кирилл - основатель.</h2>
-                    <p class="font-montserrat text-2xs md:text-xs xl:text-xl mt-1 md:mt-2.5 xl:mt-4 md:ml-0.25 xl:ml-0.5 xl:leading-6.75"><span
+                    <p class="font-montserrat text-2xs md:text-xs xl:text-xl mt-1 md:mt-2.5 xl:mt-4 -ml-2.5 md:ml-0.25 xl:ml-0.5 xl:leading-6.75"><span
                             class="font-medium text-green-400">Мастер спорта</span> Украины по тяжелой атлетике. <span
                             class="font-medium text-green-400">Высшее образование</span> института физкультуры(НуфвсУ).
                     </p>
-                    <div class="flex flex-col xl:flex-row gap-1.75 md:gap-0 xl:gap-7.5 max-w-40 md:max-w-50 xl:max-w-133 mt-2.25 md:mt-6.25 xl:mt-10.25 xl:ml-0.5">
+                    <div class="flex flex-col xl:flex-row gap-1.75 md:gap-0 xl:gap-7.5 max-w-40 md:max-w-50 xl:max-w-133 mt-2.25 -ml-2.5 md:mt-6.25 xl:mt-10.25 xl:ml-0.5">
                         <button
                             class="font-bold font-comfortaa text-sm md:text-base xl:text-2xl border-2 pt-1.25 pl-2.5 pr-2.5 pb-1 md:pt-1.5 xl:pt-3.25 xl:pl-6.5 md:pt-0.75 xl:pb-2.75 xl:pr-7 shadow-xl border-green-400 rounded-full text-blue-100  bg-green-400 tracking-wide hover:bg-blue-100 hover:text-green-400">Мой
                             инстаграм</button>
@@ -49,11 +49,11 @@
         <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto mt-0 xl:-mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-60 md:max-w-65 xl:max-w-149 md:-mt-107.5 -mt-75.25 ml-7.5 md:ml-22.75 xl:ml-0 xl:-mt-11">
-                    <h2 class="font-comfortaa font-bold text-base md:text-lg xl:text-40 tracking-wide leading-4.5 md:leading-5 xl:leading-11.25 -ml-0.25">Кето питание - <span
+                <div class="max-w-60 md:max-w-65 xl:max-w-149 md:-mt-107.5 ml-auto mr-auto -mt-75.25 ml-7.5 md:ml-22.75 xl:ml-0 xl:-mt-11">
+                    <h2 class="font-comfortaa font-bold text-base md:text-lg xl:text-40 tracking-wide leading-4.5 md:leading-5 xl:leading-11.25 -ml-2.5 md:-ml-0.25">Кето питание - <span
                             class="text-green-400">вкусное и экстремальное</span> быстрое похудение</h2>
-                    <p class="font-montserrat text-2xs md:text-xs xl:text-xl mt-1 ml-0.25 md:mt-2.5 xl:mt-3.75 md:ml-0.5">4 приема пищи.</p>
-                    <div class="flex flex-col xl:flex-row mt-2.5 md:mt-6 xl:mt-10.25 gap-1.75 md:gap-3.5 xl:gap-7.75 md:-ml-0.25 xl:ml-0.5 max-w-34 md:max-w-37.5 xl:max-w-133">
+                    <p class="font-montserrat text-2xs md:text-xs xl:text-xl mt-1 -ml-2.5 md:mt-2.5 xl:mt-3.75 md:ml-0.5">4 приема пищи.</p>
+                    <div class="flex flex-col xl:flex-row mt-2.5 md:mt-6 xl:mt-10.25 gap-1.75 md:gap-3.5 xl:gap-7.75 -ml-2.5 md:-ml-0.25 xl:ml-0.5 max-w-34 md:max-w-37.5 xl:max-w-133">
                         <button
                             class="font-comfortaa text-sm md:text-base xl:text-26 font-bold tracking-wide border-2 xl:h-15 border-green-400 bg-green-400 hover:bg-blue-100 hover:text-green-400 shadow-xl rounded-full pt-1.25 pl-0.25 pr-0.25 pb-1 md:pt-1.25 xl:pt-2.5 xl:pl-16 md:pb-0.5 xl:pb-2.5 xl:pr-17">Заказать</button>
                         <div class="flex flex-col">
@@ -69,14 +69,14 @@
         <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto mt-0 xl:-mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-45 md:max-w-48.75 xl:max-w-133.75 -mt-77.5 md:-mt-112.5 ml-7.5 md:ml-22.25 xl:ml-0 xl:-mt-11.75">
+                <div class="max-w-45 md:max-w-48.75 xl:max-w-133.75 -mt-77.5 ml-auto mr-auto md:-mt-112.5 ml-7.5 md:ml-22.25 xl:ml-0 xl:-mt-11.75">
                     <h2
-                        class="font-comfortaa font-bold text-base md:text-lg xl:text-40 tracking-wide leading-4.5 md:leading-5 xl:leading-11.25 md:ml-0.25 xl:-ml-0.25">
+                        class="font-comfortaa font-bold text-base md:text-lg xl:text-40 tracking-wide leading-4.5 md:leading-5 xl:leading-11.25 -ml-2.5 md:ml-0.25 xl:-ml-0.25">
                         Detox программа – <span class="text-green-400">вкусное очищение</span> организма</h2>
-                    <p class="leading-3.25 md:leading-4 max-w-34.5 md:max-w-47.75 xl:max-w-133.5 text-2xs md:text-xs xl:text-xl font-montserrat mt-1.25 md:mt-2.5 xl:mt-5.25 ml-0.5 md:ml-1 xl:ml-0.5">8 бутылочек
+                    <p class="leading-3.25 md:leading-4 max-w-34.5 md:max-w-47.75 xl:max-w-133.5 text-2xs md:text-xs xl:text-xl font-montserrat mt-1.25 md:mt-2.5 xl:mt-5.25 -ml-2.5 md:ml-1 xl:ml-0.5">8 бутылочек
                         <span class="text-green-400 font-medium">натуральных</span> смузи и фрешей.</p>
                     <div
-                        class="flex flex-col xl:flex-row gap-1.75 md:gap-2.75 xl:gap-7.5 mt-2.5 md:mt-6.25 xl:mt-11.75 max-w-34 md:max-w-37.5 xl:max-w-133 md:ml-0.25 xl:ml-0.5">
+                        class="flex flex-col xl:flex-row gap-1.75 md:gap-2.75 xl:gap-7.5 mt-2.5 md:mt-6.25 xl:mt-11.75 max-w-34 md:max-w-37.5 xl:max-w-133 -ml-2.5 md:ml-0.25 xl:ml-0.5">
                         <button
                             class="font-bold font-comfortaa text-sm md:text-base xl:text-26 xl:tracking-wide border-2 shadow-xl border-green-400 bg-green-400 hover:bg-blue-100 hover:text-green-400 rounded-full pt-1.25 pl-0.25 pr-0.25 pb-1 md:pt-1.25 md:pl-2.5 md:pr-2.5 md:pb-0.25 xl:pt-2.5 xl:pl-16 xl:pb-1.75 xl:pr-17 padding: 10px 64px 7px 68px;">Заказать</button>
                         <div class="flex flex-col">
@@ -93,7 +93,7 @@
         </div>
     </div>
     <div
-        class="swiper-navigation w-45 h-6 flex items-center justify-center absolute top-91.5 md:top-84.25 xl:top-200.5 xl:left-1/2 md:left-29.75 left-9.5 xl:-translate-1/2 z-30">
+        class="swiper-navigation w-45 h-6 flex items-center justify-center absolute top-91.5 md:top-85.5 xl:top-200.5 xl:left-1/2 md:left-1/3 -translate-1/2 left-1/2 z-30">
         <div class="swiper-pagination">
         </div>
         <div class="swiper-button-prev">
