build: advantages phone px-perfect

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,40 +1,40 @@
-<div class="flex max-w-1xl xl:max-w-5xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 md:h-29.5 xl:h-55 bg-amber-500 md:bg-blue-100/80 relative rounded-4xl shadow-xl md:-mt-106.5 xl:mt-29.25">
+<div class="flex max-w-1xl xl:max-w-5xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 h-80.25 md:h-29.5 xl:h-55 bg-blue-100/80 relative rounded-4xl md:shadow-xl -mt-101 md:-mt-106.5 xl:mt-29.25">
     <div class="flex ml-auto mr-auto gap-6.75 justify-center items-center relative xl:before:size-136 xl:before:absolute xl:before:rounded-full xl:before:bg-green-500/10 xl:before:-left-293.75 xl:before:top-5.25">
-        <div class="flex flex-col md:gap-2.75 xl:gap-5 absolute md:top-5.75 xl:top-11 md:-left-78.25 xl:-left-145.25 items-center">
-            <svg class="md:size-8.5 xl:size-15.75 xl:-ml-0.75">
+        <div class="flex flex-col gap-3 md:gap-2.75 xl:gap-5 absolute top-2.5 md:top-5.75 xl:top-11 -left-29.25 md:-left-78.25 xl:-left-145.25 items-center">
+            <svg class="size-10.5 md:size-8.5 xl:size-15.75 xl:-ml-0.75 text-green-400">
                 <use href="#icon-advantages-eco"></use>
             </svg>
-            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-19.25 xl:w-36 md:leading-2.25 xl:leading-4">Бережём природу. Эко-тара и проборы.</span>
+            <span class="font-montserrat text-3xs md:text-4xs xl:text-xs font-medium text-center w-22 md:w-19.25 xl:w-36 leading-2.5 md:leading-2.25 xl:leading-4">Бережём природу. Эко-тара и проборы.</span>
         </div>
-        <div class="flex flex-col md:gap-2.75 xl:gap-5 items-center absolute md:top-5.25 xl:top-10.25 md:-left-55.5 xl:-left-102.75">
-            <svg class="md:size-9 xl:size-16.5 xl:ml-0.5">
+        <div class="flex flex-col gap-2.5 md:gap-2.75 xl:gap-5 items-center absolute top-2.75 md:top-5.25 xl:top-10.25 left-2.75 md:-left-55.5 xl:-left-102.75">
+            <svg class="size-10.75 md:size-9 xl:size-16.5 xl:ml-0.5 text-green-400">
                 <use href="#icon-advantages-dishes"></use>
             </svg>
-            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-23.5 xl:w-44 md:leading-2.25 xl:leading-4">28 дней без повторения, более 300 блюд!</span>
+            <span class="font-montserrat text-3xs md:text-4xs xl:text-xs font-medium text-center w-26.75 md:w-23.5 xl:w-44 leading-2.5 md:leading-2.25 xl:leading-4">28 дней без повторения, более 300 блюд!</span>
         </div>
-        <div class="flex flex-col md:gap-2.5 xl:gap-4.75 items-center absolute md:top-5.5 xl:top-9.5 md:-left-28 xl:-left-51.75">
-            <svg class="md:size-9 xl:size-17.5">
+        <div class="flex flex-col gap-2.5 md:gap-2.5 xl:gap-4.75 items-center absolute top-29.75 md:top-5.5 xl:top-9.5 -left-30.5 md:-left-28 xl:-left-51.75">
+            <svg class="size-11.25 md:size-9 xl:size-17.5 text-green-400">
                 <use href="#icon-advantages-ingredient"></use>
             </svg>
-            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-21.25 xl:min-w-39.75 md:leading-2.25 xl:leading-4">Бесплатно заменяем блюда и ингредиенты.</span>
+            <span class="font-montserrat text-3xs md:text-4xs xl:text-xs font-medium text-center w-24.25 md:w-21.25 xl:min-w-39.75 leading-2.5 md:leading-2.25 xl:leading-4">Бесплатно заменяем блюда и ингредиенты.</span>
         </div>
-        <div class="flex flex-col md:gap-2.75 xl:gap-3.75 items-center absolute md:top-6 xl:top-12.25 md:-left-3 xl:-left-3.25">
-            <svg class="md:size-8.25 xl:size-15.75">
+        <div class="flex flex-col gap-2.75 md:gap-2.75 xl:gap-3.75 items-center absolute top-30.5 md:top-6 xl:top-12.25 left-0 md:-left-3 xl:-left-3.25">
+            <svg class="size-10.25 md:size-8.25 xl:size-15.75 text-green-400">
                 <use href="#icon-advantages-night"></use>
             </svg>
-            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-27.75 xl:w-47.75 md:leading-2.25 xl:leading-4">Готовим ночью, упаковываем и отправляем Вам!</span>
+            <span class="font-montserrat text-3xs md:text-4xs xl:text-xs font-medium text-center w-31.75 md:w-27.75 xl:w-47.75 leading-2.5 md:leading-2.25 xl:leading-4">Готовим ночью, упаковываем и отправляем Вам!</span>
         </div>
-        <div class="flex flex-col md:gap-0.5 xl:gap-1.25 items-center absolute md:top-3 xl:top-5.5 md:left-28.5 xl:left-55.25">
-            <svg class="md:size-13.5 xl:size-25">
+        <div class="flex flex-col gap-0 md:gap-0.5 xl:gap-1.25 items-center absolute top-54.5 md:top-3 xl:top-5.5 -left-30.5 md:left-28.5 xl:left-55.25">
+            <svg class="size-16.5 md:size-13.5 xl:size-25 text-green-400">
                 <use href="#icon-advantages-car"></use>
             </svg>
-            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-21.25 xl:w-36.5 md:leading-2.25 xl:leading-4">Ежедневная удобная и бесплатная доставка с 6:00 до 10:00</span>
+            <span class="font-montserrat text-3xs md:text-4xs xl:text-xs font-medium text-center w-24.25 md:w-21.25 xl:w-36.5 leading-2.5 md:leading-2.25 xl:leading-4">Ежедневная удобная и бесплатная доставка с 6:00 до 10:00</span>
         </div>
-        <div class="flex flex-col md:gap-3 xl:gap-5 items-center absolute md:top-5 xl:top-9.25 md:left-53.5 xl:left-101.5">
-            <svg class="md:size-9 xl:size-17.25">
+        <div class="flex flex-col gap-2.75 md:gap-3 xl:gap-5 items-center absolute top-57.25 md:top-5 xl:top-9.25 left-1.5 md:left-53.5 xl:left-101.5">
+            <svg class="size-11.25 md:size-9 xl:size-17.25 text-green-400">
                 <use href="#icon-advantages-oclock"></use>
             </svg>
-            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-24.75 xl:w-43 md:leading-2.25 xl:leading-4">Сохраняем Вашу энергию и до 14 часов в неделю освобождая от готовки!</span>
+            <span class="font-montserrat text-3xs md:text-4xs xl:text-xs font-medium text-center w-28.5 md:w-24.75 xl:w-43 leading-2.5 md:leading-2.25 xl:leading-4">Сохраняем Вашу энергию и до 14 часов в неделю освобождая от готовки!</span>
         </div>
     </div>
 </div>
