--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -1,4 +1,6 @@
-<div class="swiper">
+<div class="overflow-hidden pt-22.5 -mt-22.5 md:pt-20.5 md:-mt-20.5 xl:pt-41 xl:-mt-41 md:pb-88 xl:pb-100 md:-mb-88 xl:-mb-100">
+    <div class="max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 xl:pl-20 pr-5 xl:pr-20 relative before:size-129.5 md:before:size-191.25 xl:before:size-323 before:bg-green-400 before:rounded-full before:absolute max-sm:-left-8 sm:before:-right-47.5 md:before:-right-103 xl:before:-right-159 before:-top-91 md:before:-top-43 xl:before:-top-64 before:-z-20 before:shadow-xl"></div>
+    <div class="swiper">
     <div class="swiper-wrapper">
         <div class="swiper-slide ">
             <div
@@ -69,7 +71,7 @@
         <div class="swiper-slide">
             <div
                 class="flex flex-col justify-center h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto mt-0 xl:-mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
-                <div class="max-w-45 md:max-w-48.75 xl:max-w-133.75 -mt-77.5 ml-auto mr-auto md:-mt-112.5 ml-7.5 md:ml-22.25 xl:ml-0.25 xl:-mt-11.75">
+                <div class="max-w-45 md:max-w-48.75 xl:max-w-133.75 -mt-77.5 ml-auto mr-auto md:-mt-112.5 ml-9.25 md:ml-22.25 xl:ml-0.25 xl:-mt-11.75">
                     <h2
                         class="font-comfortaa font-bold text-base md:text-lg xl:text-40 tracking-wide leading-4.5 md:leading-5 xl:leading-11.25 -ml-2.5 md:ml-0.25 xl:-ml-0.25">
                         Detox программа – <span class="text-green-400">вкусное очищение</span> организма</h2>
@@ -107,4 +109,6 @@
             </svg>
         </div>
     </div>
+</div>
+</div>
 </div>
