--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header>
     <div
-        class="flex items-center max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-8 pr-5 xl:pl-19.5 xl:pr-19 pt-3.75 md:pt-1.75 xl:pt-4 xl:pb-4 relative before:size-129.75 before:-top-68 before:-right-47 md:before:size-191.25 xl:before:size-323 before:bg-green-400 before:rounded-full before:absolute md:before:-right-103 md:before:-top-22.75 xl:before:-right-159 xl:before:-top-24.5 before:-z-10 before:shadow-xl">
+        class="flex items-center max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-8 pr-5 xl:pl-19.5 xl:pr-19 pt-3.75 md:pt-1.75 xl:pt-4 xl:pb-4 relative">
         <a href="index.html"
             class="mr-auto md:mr-0 flex flex-col items-center gap-1.25 xl:gap-1.75 relative z-10 md:ml-2.25 xl:ml-0.25 before:absolute before:-z-10 before:bg-blue-100 before:rounded-full before:size-34.5 md:before:size-37.5 xl:before:size-50 2xl:before:size-66 before:left-1/2 before:top-1/2 xl:before:left-23.5 xl:before:top-17.25 before:-translate-1/2 before:shadow-xl">
             <img src="./assets/img/logo.png" alt="logo" class="w-44 md:w-31.75 h-13 xl:min-w-46.5 xl:h-23 mt-1.5 xl:mt-2 -ml-1 md:ml-0 xl:-ml-0.25">
