create: first screen info

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,8 +10,8 @@
             <nav class="flex flex-col gap-5 md:gap-0 md:flex-row bg-blue-100 md:shadow-xl md:rounded-4xl md:py-1.5 mb-8 md:mb-0 md:-ml-3 xl:-ml-5 md:pl-11.5 xl:pl-7 2xl:pl-21 md:pr-5 mr-2.5 xl:mr-5">
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:pt-2.75 xl:pb-2.25 md:py-1 xl:pr-5.5 xl:pl-4.5 hover:text-green-400">Програмы питания</a>
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:pt-2.75 xl:pb-2.25 md:py-1 xl:pr-5.5 xl:pl-4.5 hover:text-green-400">Бизнес-ланчи</a>
-                <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:pt-2.75 xl:pb-2.25 md:py-1 xl:pr-5.5 xl:pl-4.5 xl:tracking-wide text-green-400">Gastro Shop</a>
-                <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:pt-2.75 xl:pb-2.25 md:py-1 xl:pr-5.5 xl:pl-4.5 hover:text-green-400">О нас</a>
+                <a href="index.html" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:pt-2.75 xl:pb-2.25 md:py-1 xl:pr-5.5 xl:pl-4.5 xl:tracking-wide text-green-400">Gastro Shop</a>
+                <a href="info.html" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:pt-2.75 xl:pb-2.25 md:py-1 xl:pr-5.5 xl:pl-4.5 hover:text-green-400">О нас</a>
                 <a href="#" class="md:text-3xs xl:text-sm font-bold md:font-normal px-3.25 md:px-2.75 xl:pt-2.75 xl:pb-2.25 md:py-1 xl:pr-5.25 xl:pl-4.75 hover:text-green-400">Блог</a>
             </nav>
             <a href="tel:+380689494919" class="@max-md:w-full block text-center md:inline-block hover:border-green-100 hover:text-green-400 md:hover:text-blue-100 hover:bg-blue-100 md:hover:bg-green-400 text-blue-100 md:text-green-400 border-3 border-green-400 md:border-blue-100 rounded-4xl ml-auto px-9.5 py-1.5 md:px-4 md:py-1.5 xl:pt-2.5 xl:pb-2 xl:pl-7 xl:pr-6.5 font-bold text-lg md:text-2xs xl:text-xl bg-green-400 md:bg-blue-100 shadow-xl font-montserrat md:mr-0.5 xl:mr-0 xl:ml-0">+38 (068) 949 - 49 -19</a>
