feat: mobile-screen info

--- a/src/partials/social-info.html
+++ b/src/partials/social-info.html
@@ -1,26 +1,26 @@
 <div class="overflow-hidden md:pb-88 xl:pb-105 md:-mb-88 xl:-mb-129.5">
 <div class="max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 xl:pl-20 pr-5 xl:pr-20 relative">
-    <img src="./assets/img/food-photo.png" alt="preview" class="absolute xl:-top-27.25 xl:-right-73.75">
-    <div class="xl:mt-50.75 xl:mb-50 xl:ml-1.25 xl:before:size-151 xl:before:bg-green-500/10 xl:before:rounded-full xl:before:absolute xl:before:-top-31.75 xl:before:-right-22.75 xl:after:border-15 xl:after:size-46.25 xl:after:rounded-full xl:after:border-green-500/10 xl:after:absolute xl:after:-top-71.5 xl:after:-left-11.25 xl:after:-z-30">
-        <h2 class="font-comfortaa font-bold xl:text-32 xl:max-w-150 xl:leading-9">«GastroChef - легко для занятых»</h2>
-        <p class="font-comfortaa font-light xl:text-xl xl:max-w-146 xl:leading-5.5 xl:mt-10">GastroChef - правильное питание с доставкой на дом, создано что бы облегчить жизнь, освободить время от готовки, от ненужных перекусов, фастфудов и дать возможность чувствовать себя легко и полным энергии, сил, для новых свершений и побед.</p>
-        <p class="font-comfortaa font-light xl:text-xl xl:max-w-145 xl:leading-5.5 xl:mt-5">Все продукты для приготовления правильного питания закупаются только с сертификатами, а рационы готовятся на современной и безопасной кухне ночью перед приездом к Вам!</p>
-        <p class="font-comfortaa font-bold xl:text-xl xl:max-w-150 xl:leading-5.5 xl:mt-10">Друзья, если у Вас остались вопросы Вы с легкостью можете позвонить нам или написать мне лично в Инстаграм или Фейсбук.</p>
-        <h2 class="font-comfortaa font-bold text-32 mt-6 xl:before:border-30 xl:before:border-green-500/10 xl:before:absolute xl:before:top-74.25 xl:before:-left-133.25 xl:before:size-130 xl:before:rounded-full">С уважением, Кобылинский Кирилл.</h2>
-        <div class="flex gap-3.75 xl:mt-2.25 xl:ml-5">
+    <img src="./assets/img/food-photo.png" alt="preview" class="absolute md:-top-7 md:-right-7.75 xl:-top-27.25 xl:-right-73.75 md:w-136 md:h-100.5 xl:w-280 xl:h-208.5">
+    <div class="md:max-w-87.5 xl:max-w-165 mt-105.5 md:mt-23.75 md:ml-10.75 xl:mt-51.75 xl:mb-50 xl:ml-1.25 xl:before:size-151 xl:before:bg-green-500/10 xl:before:rounded-full xl:before:absolute xl:before:-top-31.75 xl:before:-right-22.75 xl:before:-z-10 xl:after:border-15 xl:after:size-46.25 xl:after:rounded-full xl:after:border-green-500/10 xl:after:absolute xl:after:-top-71.5 xl:after:-left-11.25 xl:after:-z-30">
+        <h2 class="font-comfortaa font-bold md:text-lg xl:text-32 xl:max-w-150 xl:leading-9">«GastroChef - легко для занятых»</h2>
+        <p class="font-comfortaa font-light md:text-xs xl:text-xl md:max-w-85 xl:max-w-146 md:leading-3.25 xl:leading-5.5 md:mt-6.5 xl:mt-10">GastroChef - правильное питание с доставкой на дом, создано что бы облегчить жизнь, освободить время от готовки, от ненужных перекусов, фастфудов и дать возможность чувствовать себя легко и полным энергии, сил, для новых свершений и побед.</p>
+        <p class="font-comfortaa font-light md:text-xs xl:text-xl md:max-w-81 xl:max-w-145 md:leading-3.25 xl:leading-5.5 md:mt-5">Все продукты для приготовления правильного питания закупаются только с сертификатами, а рационы готовятся на современной <span class="md:text-nowrap xl:text-wrap">и безопасной</span> <span class="text-nowrap">кухне ночью перед приездом к Вам!</span></p>
+        <p class="font-comfortaa font-bold md:text-xs xl:text-xl md:max-w-69.25 xl:max-w-150 md:leading-3.25 xl:leading-5.5 md:mt-7.5 xl:mt-10">Друзья, если у Вас остались вопросы Вы c легкостью можете позвонить нам или <span class="md:text-nowrap xl:text-wrap"> написать мне лично в Инстаграм или Фейсбук.</span></p>
+        <h2 class="font-comfortaa font-bold md:text-lg xl:text-32 md:mt-4 xl:mt-6 xl:before:border-30 xl:before:border-green-500/10 xl:before:absolute xl:before:top-74.25 xl:before:-left-133.25 xl:before:size-130 xl:before:rounded-full">С уважением, Кобылинский Кирилл.</h2>
+        <div class="flex md:gap-3.75 xl:gap-3.75 md:mt-2.75 md:ml-5 xl:mt-2.25 xl:ml-5">
             <a href="#"
-                    class="md:size-5.5 xl:size-7.5 bg-gray-950 text-blue-100 rounded-full flex items-center justify-center">
+                    class="md:size-5 xl:size-7.5 bg-gray-950 text-blue-100 rounded-full flex items-center justify-center">
                     <svg class="size-5.5 md:size-3.5 xl:size-5">
                         <use href="#icon-instagram"></use>
                     </svg>
                 </a>
                 <a href="#"
-                    class="size-5.5 xl:size-7.75 bg-gray-950 text-blue-100 rounded-full flex items-center justify-center">
+                    class="size-5 xl:size-7.75 bg-gray-950 text-blue-100 rounded-full flex items-center justify-center">
                     <svg>
                         <use href="#icon-facebook"></use>
                     </svg>
                 </a>
-            <span class="font-montserrat text-xl xl:pl-1 xl:pt-0.25">- Я в социальных сетях</span>
+            <span class="font-montserrat md:text-xs xl:text-xl md:pl-1.5 md:pt-0.5 xl:pl-1 xl:pt-0.25">- Я в социальных сетях</span>
         </div>
     </div>
 </div>
