--- a/src/style.css
+++ b/src/style.css
@@ -80,6 +80,7 @@
     --text-4xs: 7px;
     --text-3xs: 8px;
     --text-2xs: 10px;
+    --text-17: 17px;
     --text-26: 26px;
     --text-32: 32px;
     --text-35: 35px;
