--- a/src/style.css
+++ b/src/style.css
@@ -80,8 +80,10 @@
     --text-4xs: 7px;
     --text-3xs: 8px;
     --text-2xs: 10px;
+    --text-22: 22px;
     --text-25: 25px;
     --text-26: 26px;
+    --text-30: 30px;
     --text-32: 32px;
     --text-35: 35px;
     --text-40: 40px;
