feat: desctop and mobile accordion

--- a/src/partials/accordion.html
+++ b/src/partials/accordion.html
@@ -1,70 +1,70 @@
-<div class="max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 xl:pl-20 pr-5 xl:pr-19 relative mt-20 flex gap-10">
-    <div class="xl:max-w-146 flex flex-col gap-4 ml-1.25">
-    <h2 class="font-comfortaa font-bold text-30 ml-16.5">Оформить заказ</h2>
-    <p class="font-montserrat font-normal text-base tracking-wide max-w-95.5 text-center -mt-5 ml-4 leading-5.25">Обсудите все детали заказа по телефону или сами укажите все подробности онлайн</p>
+<div class="max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto pl-5 xl:pl-20 pr-5 xl:pr-19 relative mt-20 flex xl:flex-row flex-col gap-10 z-10   ">
+    <div class="max-w-146 flex flex-col gap-4 xl:ml-36.25 md:ml-1.25 ml-auto mr-auto">
+    <h2 class="font-comfortaa font-bold text-xl md:text-25 xl:text-30 ml-9.75 md:ml-57.25 xl:-ml-18.5 md:-mt-1.25 xl:-mt-3.5">Оформить заказ</h2>
+    <p class="font-montserrat font-normal text-xs md:text-base tracking-wide w-72 md:w-95.5 text-center -ml-2.5 -mt-2.25 md:-mt-3 xl:-mt-5 xl:-ml-31 md:ml-39 leading-4 md:leading-5.25">Обсудите все детали заказа по телефону или сами укажите все подробности онлайн</p>
     <form>
-        <div class="flex flex-col">
-            <label for="user-name" class="test font-comfortaa font-bold text-lg tracking-wide text-green-400 mt-3 ml-3.5">Имя</label>
-            <input type="text" id="user-name" name="user-name" value="Иван" onfocus="this.value = '';" class="max-w-104.5 bg-blue-200 rounded-3xl h-10 pl-4 font-montserrat tracking-wide text-base mt-1">
+        <div class="flex flex-col md:ml-35 xl:-ml-35">
+            <label for="user-name" class="test font-comfortaa font-bold text-lg tracking-wide text-green-400 mt-3 ml-4 md:ml-3.5">Имя</label>
+            <input type="text" id="user-name" name="user-name" value="Иван" onfocus="this.value = '';" class="max-w-70 md:max-w-104.5 bg-blue-200 rounded-3xl h-10 pl-4.5 md:pl-4 font-montserrat tracking-wide text-base mt-0.75 md:mt-1">
         </div>
-        <div class="flex flex-col">
-            <label for="user-pnone" class="test font-comfortaa font-bold text-lg tracking-wide text-green-400 mt-6.75 ml-4.25">Номер телефона</label>
-            <input type="number" id="user-pnone" name="user-pnone" value="0972140632" onfocus="this.value = '';" class="max-w-104.5 bg-blue-200 rounded-3xl h-10 pl-4 font-montserrat tracking-wide text-base mt-0.5">
+        <div class="flex flex-col md:ml-35 xl:-ml-35">
+            <label for="user-pnone" class="test font-comfortaa font-bold text-lg tracking-wide text-green-400 mt-7 md:mt-6.75 ml-4.5 md:ml-4.25">Номер телефона</label>
+            <input type="number" id="user-pnone" name="user-pnone" value="0972140632" onfocus="this.value = '';" class="max-w-70 md:max-w-104.5 bg-blue-200 rounded-3xl h-10 pl-4.5 md:pl-4 font-montserrat tracking-wide text-base mt-0.5">
         </div>
-        <fieldset class="mt-7.75 ml-1.75">
+        <fieldset class="mt-7.75 md:mt-8 xl:mt-8 ml-3 md:ml-36.5 xl:-ml-33.5 font-comfortaa font-bold tracking-wide text-sm md:text-base">
             <div class="input-box">
                 <input type="checkbox" id="test-day" name="test-day">
-                <label for="test-day" class="font-comfortaa font-bold tracking-wide">Тест-день! Получить скидку -30%?</label>
+                <label for="test-day">Тест-день! Получить скидку -30%?</label>
         </div>
         <div class="input-box">
             <input type="checkbox" id="private-conditions" name="private-conditions">
-            <label for="private-conditions" class="font-comfortaa font-bold tracking-wide">Согласен с <span class="text-green-400">условиями сотрудничества</span></label>
+            <label for="private-conditions">Согласен с <span class="text-green-400">условиями сотрудничества</span></label>
         </div>
         </fieldset>
-        <div class="felx flex-col mt-3.75">
-            <button type="button" class="ml-14.25 pt-2.75 pr-6.5 pl-7 pb-2.5 font-comfortaa font-bold text-22 tracking-wide border-3 rounded-full hover:text-blue-100 hover:bg-green-400 border-green-400 text-green-400 bg-blue-100"> Заказ по телефону</button>
-            <p class="font-comfortaa font-bold text-22 mt-2.5 -ml-3 tracking-wide text-center">ИЛИ</p>
-            <button type="button" class="mt-1.75 ml-11 -ml-3.25 pt-3 pl-16.5 pb-2.75 pr-16.5 font-comfortaa font-bold text-2xl hover:text-green-400 hover:bg-blue-100 text-blue-100 bg-green-400 border-3 border-green-400 rounded-full tracking-wide">Онлайн заказ</button>
+        <div class="felx flex-col md:mt-0 md:ml-35 xl:-ml-35">
+            <button type="button" class="md:ml-14.25 w-70 pt-3.5 pb-3.5 -ml-0.75 mt-3.5 md:w-74.5 md:pt-2.75 md:pb-2.5 font-comfortaa font-bold text-lg md:text-22 tracking-wide border-2 md:border-3 rounded-full hover:text-blue-100 hover:bg-green-400 border-green-400 text-green-400 bg-blue-100"> Заказ по телефону</button>
+            <p class="font-comfortaa font-bold text-22 mt-2.25 -ml-2.5 md:mt-2.25 xl:mt-2.5 md:-ml-2 xl:-ml-1.75 tracking-wide text-center">ИЛИ</p>
+            <button type="button" class="mt-1.75 w-70 md:w-81 -ml-1 md:ml-11 xl:ml-10.75 pt-4 pb-3 md:pt-3 md:pb-2.75 font-comfortaa font-bold text-xl md:text-2xl hover:text-green-400 hover:bg-blue-100 text-blue-100 bg-green-400 border-2 md:border-3 border-green-400 rounded-full tracking-wide">Онлайн заказ</button>
         </div>
     </form>
 </div>
 <section>
-        <div id="accordion" class="flex flex-col gap-4 w-170 -mt-3.75 ml-9">
-            <h2 class="font-comfortaa font-bold text-25 pl-35.5 pb-3">Часто задаваемые вопросы</h2>
-            <div class="accordion-item max-w-170 bg-blue-100 shadow-md rounded-3xl min-h-10">
-                <h2 class="accordion-question pl-5 py-2.5 tracking-wide">Как осуществляется доставка правильного питания?</h2>
+        <div id="accordion" class="flex flex-col gap-4.75 md:gap-4 max-w-72.5 md:max-w-170 xl:w-170 -mt-1.5 md:mt-17.5 xl:-mt-3.75 xl:ml-9 md:ml-1.5 ml-auto mr-auto">
+            <h2 class="font-comfortaa font-bold text-xl md:text-25 leading-5.5 pl-0.25 md:pl-35.5 md:pb-5.25 text-center md:-mt-2.25 md:-ml-36.25">Часто задаваемые вопросы</h2>
+            <div class="accordion-item max-w-70 md:max-w-170 bg-blue-100 text-2xs md:text-base shadow-md rounded-3xl min-h-10 mt-2.5 md:mt-0">
+                <h2 class="accordion-question pl-4 md:pl-5 py-1.5 md:py-2.5 tracking-wide max-w-57 md:max-w-170">Как осуществляется доставка правильного питания?</h2>
                 <div class="accordion-answer hidden pl-5 py-2.5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, quisquam ducimus dignissimos libero laudantium voluptates non commodi voluptatum dolore quos!</div>
             </div>
-            <div class="accordion-item max-w-170 bg-blue-100 shadow-md rounded-3xl min-h-10">
-                <h2 class="accordion-question pl-5 py-2.5 tracking-wide">Можно ли менять время доставки\место?</h2>
+            <div class="accordion-item max-w-70 md:max-w-170 bg-blue-100 text-2xs md:text-base shadow-md rounded-3xl min-h-10">
+                <h2 class="accordion-question pl-4 md:pl-5 py-1.5 md:py-2.5 tracking-wide max-w-57 md:max-w-170">Можно ли менять время доставки\место?</h2>
                 <div class="accordion-answer hidden pl-5 py-2.5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, quisquam ducimus dignissimos libero laudantium voluptates non commodi voluptatum dolore quos!</div>
             </div>
-            <div class="accordion-item max-w-170 bg-blue-100 shadow-md rounded-3xl min-h-10">
-                <h2 class="accordion-question pl-5 py-2.5 tracking-wide">Как и в чем приезжает еда?</h2>
+            <div class="accordion-item max-w-70 md:max-w-170 bg-blue-100 text-2xs md:text-base shadow-md rounded-3xl min-h-10">
+                <h2 class="accordion-question pl-4 md:pl-5 py-1.5 md:py-2.5 tracking-wide max-w-57 md:max-w-170">Как и в чем приезжает еда?</h2>
                 <div class="accordion-answer hidden pl-5 py-2.5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, quisquam ducimus dignissimos libero laudantium voluptates non commodi voluptatum dolore quos!</div>
             </div>
-            <div class="accordion-item max-w-170 bg-blue-100 shadow-md rounded-3xl min-h-10">
-                <h2 class="accordion-question pl-5 py-2.5 tracking-wide">Когда Вы готовите?</h2>
+            <div class="accordion-item max-w-70 md:max-w-170 bg-blue-100 text-2xs md:text-base shadow-md rounded-3xl min-h-10">
+                <h2 class="accordion-question pl-4 md:pl-5 py-1.5 md:py-2.5 tracking-wide max-w-57 md:max-w-170">Когда Вы готовите?</h2>
                 <div class="accordion-answer hidden pl-5 py-2.5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, quisquam ducimus dignissimos libero laudantium voluptates non commodi voluptatum dolore quos!</div>
             </div>
-            <div class="accordion-item max-w-170 bg-blue-100 shadow-md rounded-3xl min-h-10">
-                <h2 class="accordion-question pl-5 py-2.5 tracking-wide">Какие продукты Вы используете?</h2>
+            <div class="accordion-item max-w-70 md:max-w-170 bg-blue-100 text-2xs md:text-base shadow-md rounded-3xl min-h-10">
+                <h2 class="accordion-question pl-4 md:pl-5 py-1.5 md:py-2.5 tracking-wide max-w-57 md:max-w-170">Какие продукты Вы используете?</h2>
                 <div class="accordion-answer hidden pl-5 py-2.5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, quisquam ducimus dignissimos libero laudantium voluptates non commodi voluptatum dolore quos!</div>
             </div>
-            <div class="accordion-item max-w-170 bg-blue-100 shadow-md rounded-3xl min-h-10">
-                <h2 class="accordion-question pl-5 py-2.5 tracking-wide">Я буду есть одно и то же?</h2>
+            <div class="accordion-item max-w-70 md:max-w-170 bg-blue-100 text-2xs md:text-base shadow-md rounded-3xl min-h-10">
+                <h2 class="accordion-question pl-4 md:pl-5 py-1.5 md:py-2.5 tracking-wide max-w-57 md:max-w-170">Я буду есть одно и то же?</h2>
                 <div class="accordion-answer hidden pl-5 py-2.5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, quisquam ducimus dignissimos libero laudantium voluptates non commodi voluptatum dolore quos!</div>
             </div>
-            <div class="accordion-item max-w-170 bg-blue-100 shadow-md rounded-3xl min-h-10">
-                <h2 class="accordion-question pl-5 py-2.5 tracking-wide">У меня аллергия и непереносимость определенных продуктов</h2>
+            <div class="accordion-item max-w-70 md:max-w-170 bg-blue-100 text-2xs md:text-base shadow-md rounded-3xl min-h-10">
+                <h2 class="accordion-question pl-4 md:pl-5 py-1.5 md:py-2.5 tracking-wide max-w-57 md:max-w-170">У меня аллергия и непереносимость определенных продуктов</h2>
                 <div class="accordion-answer hidden pl-5 py-2.5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, quisquam ducimus dignissimos libero laudantium voluptates non commodi voluptatum dolore quos!</div>
             </div>
-            <div class="accordion-item max-w-170 bg-blue-100 shadow-md rounded-3xl min-h-10">
-                <h2 class="accordion-question pl-5 py-2.5 tracking-wide">В какой очередности все есть?</h2>
+            <div class="accordion-item max-w-70 md:max-w-170 bg-blue-100 text-2xs md:text-base shadow-md rounded-3xl min-h-10">
+                <h2 class="accordion-question pl-4 md:pl-5 py-1.5 md:py-2.5 tracking-wide max-w-57 md:max-w-170">В какой очередности все есть?</h2>
                 <div class="accordion-answer hidden pl-5 py-2.5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, quisquam ducimus dignissimos libero laudantium voluptates non commodi voluptatum dolore quos!</div>
             </div>
-            <div class="accordion-item max-w-170 bg-blue-100 shadow-md rounded-3xl min-h-10">
-                <h2 class="accordion-question pl-5 py-2.5 tracking-wide">Можно ли замораживать программу?</h2>
+            <div class="accordion-item max-w-70 md:max-w-170 bg-blue-100 text-2xs md:text-base shadow-md rounded-3xl min-h-10">
+                <h2 class="accordion-question pl-4 md:pl-5 py-1.5 md:py-2.5 tracking-wide max-w-57 md:max-w-170">Можно ли замораживать программу?</h2>
                 <div class="accordion-answer hidden pl-5 py-2.5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, quisquam ducimus dignissimos libero laudantium voluptates non commodi voluptatum dolore quos!</div>
             </div>
         </div>
