--- a/src/main.scss
+++ b/src/main.scss
@@ -120,11 +120,19 @@
         background-image: url("data:image/svg+xml,%3Csvg width='9' height='15' viewBox='0 0 9 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.07112 8.07112C8.46164 7.6806 8.46164 7.04743 8.07112 6.65691L1.70716 0.292946C1.31664 -0.0975785 0.68347 -0.0975785 0.292946 0.292946C-0.0975785 0.68347 -0.0975785 1.31664 0.292946 1.70716L5.9498 7.36401L0.292946 13.0209C-0.0975785 13.4114 -0.0975785 14.0446 0.292946 14.4351C0.68347 14.8256 1.31664 14.8256 1.70716 14.4351L8.07112 8.07112ZM6.36401 7.36401V8.36401H7.36401V7.36401V6.36401H6.36401V7.36401Z' fill='black'/%3E%3C/svg%3E");
         position: absolute;
         top: 14px;
-        right: 18px;
+        right: 20px;
         content: "";
         width: 9px;
         height: 15px;
         transition: transform 0.3s;
+        @media only screen and (max-width: 767.9px) {
+            top: 10px;
+            right: -30px;     
+        }
+        @media only screen and (min-width: 768px) and (max-width: 1279.9px) {
+            top: 14px;
+            right: 9px;
+        }
     }
 }
 
